--- a/PM2E107/PM2E107.csproj
+++ b/PM2E107/PM2E107.csproj
@@ -51,10 +51,13 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Views\" />
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionPM2E107HideInfoBar="True" XamarinHotReloadGenericExceptionInfoBarPM2E107HideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
