--- a/PM2E107/Platforms/Android/AndroidManifest.xml
+++ b/PM2E107/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCLVz9r_wWtOwc0tfeiohhjI40lU6YM6OA" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 
@@ -36,4 +39,19 @@
 
 	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
+
+
+	<!-- USO CONTROL MAP: (YA HAY UNA DIRECTIVA APPLICATION ARRIBA)
+	https://learn.microsoft.com/en-us/dotnet/maui/user-interface/controls/map 
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true" android:debuggable="true">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCLVz9r_wWtOwc0tfeiohhjI40lU6YM6OA" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	</application>-->
+
+	<!-- Required to access the user's location (Ya estan definidos estos permisos mas arriba)
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	-->
+	
 </manifest>
